# dde-xsettings

./: CMakeLists.txt  README.md
dbus/: com.deepin.XSettings.xml  org.deepin.dde.XSettings.xml
dbus/types/: arrayOfColor.cpp  arrayOfColor.h  scaleFactors.cpp
debian/: changelog  control  copyright  dde-xsettings.install
misc/: CMakeLists.txt
misc/dbusservice/: CMakeLists.txt  org.deepin.dde.XSettings.service
misc/dconfig/: CMakeLists.txt  org.deepin.dde.xsetting.dconfig.json  org.deepin.dde.xsettings.json
misc/systemd/: CMakeLists.txt  dde-xsetting.service  dde-xsettings.service
src/: CMakeLists.txt  main.cpp
src/impl/: dconfinfos.cpp  dconfinfos.h  scalefactorhelper.cpp  scalefactorhelper.h  xsdatainfo.cpp  xsdatainfo.h  xsettings1.cpp  xsettings1.h  xsettingsmanager.cpp  xsettingsmanager.h
src/modules/api/: keyfile.cpp  keyfile.h  utils.cpp  utils.h  xcbutils.cpp  xcbutils.h
src/modules/common/: common.h
